--- a/src/innoLCL/frontBundle/Resources/config/routing.yml
+++ b/src/innoLCL/frontBundle/Resources/config/routing.yml
@@ -23,6 +23,18 @@ innolcl_front_landing_vote:
     path:     /votes
     defaults: { _controller: innoLCLfrontBundle:Default:vote }
 
+#landing test date de la phase 4
+innolcl_front_landing_vote_testeur:
+    path:     /votes/{Y}/{M}/{d}/{h}/{m}/{s}
+    defaults: { _controller: innoLCLfrontBundle:Default:votetesteur }
+    requirements:
+        Y:  \d+
+        M:  \d+
+        d:  \d+
+        h:  \d+
+        m:  \d+
+        s:  \d+
+
 #landing phase 5
 innolcl_front_landing_results:
     path:     /results
