--- a/src/innoLCL/AllUserBundle/Resources/config/routing.yml
+++ b/src/innoLCL/AllUserBundle/Resources/config/routing.yml
@@ -49,6 +49,12 @@ fos_user_resetting_reset:
     defaults: { _controller: innoLCLAllUserBundle:Resetting:reset }
     requirements:
         _method: GET|POST
+        
+fos_user_resetting_request:
+    path: /resetting/reset/{token}
+    defaults: { _controller: innoLCLAllUserBundle:Resetting:reset }
+    requirements:
+        _method: GET|POST
 
 
 
