--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -49,6 +49,8 @@ security:
        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
        
+       - { path: ^/votes_fin, role: IS_AUTHENTICATED_ANONYMOUSLY }
+       
        - { path: ^/register/, role: IS_AUTHENTICATED_ANONYMOUSLY }
        - { path: ^/register/check-email, role: IS_AUTHENTICATED_ANONYMOUSLY }
        - { path: ^/register/confirm, role: IS_AUTHENTICATED_ANONYMOUSLY }               
